--- a/src/index.html
+++ b/src/index.html
@@ -22,10 +22,10 @@
     <script src="scripts/main.js" defer></script>
   </head>
   <body class="page__body">
-    <header class="header">
+    <header class="header" hidden>
       <div class="container">
         <div class="header__content">
-          <div class="header__nav">
+          <div class="top-actions">
             <a href="/" class="logo">
               <img 
               class="logo__image"
@@ -35,10 +35,10 @@
     
             <a 
               href="tel:+123455555555"
-              class="icon header__call"></a>
+              class="icon icon--phone header__call"></a>
             <a 
               href="#" 
-              class="icon header__menu-opener"></a>
+              class="icon icon--menu"></a>
           </div>
     
           <h1 class="header__title">
@@ -49,5 +49,24 @@
         </div>
       </div>
     </header>
+
+    <nav class="menu">
+      <div class="container">
+        <div class="menu__content">
+          <div class="top-actions">
+            <a href="/" class="logo">
+              <img 
+              class="logo__image"
+                src="images/logo.png"
+                alt="Bose">
+            </a>
+
+            <a 
+              href="#" 
+              class="icon icon--cross"></a>
+          </div>
+        </div>
+      </div>
+    </nav>
   </body>
 </html>
