--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
     <script src="scripts/main.js" defer></script>
   </head>
   <body class="page__body">
-    <header class="header" hidden>
+    <header class="header page__section">
       <div class="container">
         <div class="header__content">
           <div class="top-actions">
@@ -36,8 +36,9 @@
             <a 
               href="tel:+123455555555"
               class="icon icon--phone header__call"></a>
+
             <a 
-              href="#" 
+              href="#menu" 
               class="icon icon--menu"></a>
           </div>
     
@@ -50,10 +51,10 @@
       </div>
     </header>
 
-    <nav class="menu">
+    <nav class="page__menu menu" id="menu">
       <div class="container">
         <div class="menu__content">
-          <div class="top-actions">
+          <div class="menu__top top-actions">
             <a href="/" class="logo">
               <img 
               class="logo__image"
@@ -65,8 +66,95 @@
               href="#" 
               class="icon icon--cross"></a>
           </div>
+
+          <ul class="menu__list">
+            <li class="menu__item">
+              <a href="#" class="menu__link">Home</a>
+            </li>
+            <li class="menu__item">
+              <a href="#recommended" class="menu__link">Recommended</a>
+            </li>
+            <li class="menu__item">
+              <a href="#categories" class="menu__link">Categories</a>
+            </li>
+            <li class="menu__item">
+              <a href="how-to-buy" class="menu__link">How to buy</a>
+            </li>
+            <li class="menu__item">
+              <a href="#contacts" class="menu__link">Contacts</a>
+            </li>
+          </ul>
+
+          <a
+            href="tel:+123455555555"
+            class="menu__call menu__call--phone"
+          >
+            +1 234 5555-55-55
+          </a>
+
+          <a 
+            href="tel:+123455555555"
+            class="menu__call  menu__call--action"
+          >
+            call to order
+          </a>
         </div>
       </div>
     </nav>
+
+
+    <main>
+      <section class="page__section" id="recommended">
+        <div class="container">
+          <h2 class="page__section-title">Recommended</h2>
+        </div>
+      </section>
+
+      <section class="page__section" id="categories">
+        <div class="container">
+          <h2 class="page__section-title">Browse Bose products by category</h2>
+        </div>
+      </section>
+
+      <section class="page__section buy-direct" id="how-to-buy">
+        <div class="container">
+          <div class="grid">
+            <div class="grid__item grid__item--1-5">
+              <h2 class="buy-direct__title">
+                Why buy direct
+                <br>
+                from Bose
+              </h2>
+            </div>
+            
+            <div class="grid__item grid__item--6-10">
+              <div>
+                <div class="buy-direct
+                __subtitle">Free 2-day shipping and returns</div>
+                <div class="buy-direct
+                __subtitle">90-day risk-free trial</div>
+                <div class="buy-direct
+                __subtitle">World class customer service</div>
+                <div class="buy-direct
+                __subtitle">My Bose account management</div>
+              </div>
+
+              <div class="buy-direct
+              __paragraph">
+                A great product is more than what&#39;s in the box. It&#39;s a promise of premium performance, world-class support, and everything you expect from a trusted brand. It&#39;s just one of many reasons why you&#39;ll shop with confidence on Bose.com.
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="page__section" id="contacts">
+        <div class="container">
+          <h2 class="page__section-title">Contact us</h2>
+        </div>
+      </section>
+    </main>
+
+    <footer class="footer"></footer>
   </body>
 </html>
