--- a/src/index.html
+++ b/src/index.html
@@ -110,12 +110,12 @@
         </div>
       </section>
 
-      <section class="page__section" id="categories">
+      <section class="page__section gallery" id="categories">
         <div class="container">
           <h2 class="page__section-title">Browse Bose products by category</h2>
 
-          <div class="place">
-            <div class="place--photos">
+          <div class="gallery__place place">
+            <div class="place__photos">
               <div class="grid">
                 <div class="grid__item grid__item--desktop-1-8">
                   <div class="place__photo-container">
@@ -139,7 +139,80 @@
                 </div>
               </div>
             </div>
-            <div class="place--description"></div>
+
+            <div class="place__description">
+              Headphones & earbuds
+            </div>
+          </div>
+
+          <div class="gallery__place place">
+            <div class="place__photos">
+              <div class="grid">
+                <div class="grid__item grid__item--desktop-1-8">
+                  <div class="place__photo-container">
+                    <img 
+                      src="images/photo-3-desktop.jpg" 
+                      alt="Place 1" 
+                      class="place__photo"
+                    >
+                  </div>
+
+                </div>
+                
+                <div class="grid__item grid__item--desktop-9-12">
+                  <div class="place__photo-container">
+                    <img
+                      src="images/photo-4-desktop.jpg"
+                      alt="Place 1"
+                      class="place__photo"
+                    >
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="place__description">
+              Speakers
+            </div>
+          </div>
+
+          <div class="gallery__place place">
+            <div class="place__photos">
+              <div class="grid">
+                <div class="grid__item grid__item--desktop-1-4">
+                  <div class="place__photo-container">
+                    <img 
+                      src="images/photo-5-desktop.jpg" 
+                      alt="Place 1" 
+                      class="place__photo"
+                    >
+                  </div>
+
+                </div>
+                
+                <div class="grid__item grid__item--desktop-5-12">
+                  <div class="place__photo-container">
+                    <img
+                      src="images/photo-6-desktop.jpg"
+                      alt="Place 1"
+                      class="place__photo"
+                    >
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="place__description">
+              Audio sunglasses
+            </div>
+          </div>
+
+          <div class="grid grid--desktop">
+            <div class="grid__item grid__item--5-8">
+              <a href="#" class="button">
+                View all
+              </a>
+            </div>
           </div>
         </div>
       </section>
