--- a/src/index.html
+++ b/src/index.html
@@ -109,7 +109,7 @@
 
 
     <main>
-      <section class="page__section recommended" id="recommended">
+      <section class="page__section recommended page__section--recommended" id="recommended">
         <div class="container">
           <h2 class="page__section-title">Recommended</h2>
 
@@ -118,9 +118,9 @@
               <div class="article">
                 <div class="article__photo-container">
                   <img 
-                  class="article__photo"
-                  src="images/articles/1-desktop.png"
-                  alt="Bose portable Smart speaker"
+                    class="article__photo"
+                    src="images/articles/1-desktop.png"
+                    alt="Bose portable Smart speaker"
                   >
                 </div>
                 
@@ -191,7 +191,7 @@
 
       <section class="page__section gallery" id="categories">
         <div class="container">
-          <h2 class="page__section-title">Browse Bose products by category</h2>
+          <h2 class="page__section-title">Browse Bose<br>products by category</h2>
           <div class="gallery__category category">
             <div class="category__photos">
               <div class="category__photo-container category__photo-container--big">
@@ -318,20 +318,20 @@
                 <input 
                   name="name"
                   type="text"
-                  categoryholder="Name"
+                  placeholder="Name"
                   class="contact-us__field form-field"
                 >
                 
                 <input 
                   name="email"
-                  categoryholder="Email"
+                  placeholder="Email"
                   type="email"
                   class="contact-us__field form-field"
                 >
 
                 <textarea
                   name="message"
-                  categoryholder="Message" 
+                  placeholder="Message" 
                   class="
                     contact-us__field 
                     contact-us__field--last
