fix layout according design bose 1260 header hovers

--- a/src/index.html
+++ b/src/index.html
@@ -240,7 +240,7 @@
             </div>
           </div>
 
-          <div class="gallery__category category">
+          <div class="gallery__category gallery__category--last category">
             <div class="category__photos">
               <div class="category__photo-container category__photo-container--small">
                 <img 
